force-app/main/default/objects/uNI_PortfolioOutput__c/uNI_PortfolioOutput__c.object-meta.xml
<CustomObject>
    <label>Portfolio Output</label>
    <nameField>
        <displayFormat>O/p-{0000}</displayFormat>
        <label>Protfolio Output Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Outputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>