force-app/main/default/objects/uNI_PortfolioOutput__c/fields/Lead_Organization__c.field-meta.xml
<CustomField>
    <fullName>Lead_Organization__c</fullName>
    <label>Lead Organization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>