force-app/main/default/objects/uNI_PortfolioOutput__c/fields/Mapping_Output_Field_in_Relative_Objs__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Output_Field_in_Relative_Objs__c</fullName>
    <label>Mapping Output Field in Relative Objs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>