force-app/main/default/objects/uNI_PortfolioOutput__c/fields/Sub_implementers_1__c.field-meta.xml
<CustomField>
    <fullName>Sub_implementers_1__c</fullName>
    <label>Sub-implementers 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>