force-app/main/default/objects/uNI_PortfolioOutput__c/fields/Sub_implementers_3__c.field-meta.xml
<CustomField>
    <fullName>Sub_implementers_3__c</fullName>
    <label>Sub-implementers 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>