force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_CallForProposals__c.field-meta.xml
<CustomField>
    <fullName>uNI_CallForProposals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call For Proposals</label>
    <referenceTo>FundingOpportunity</referenceTo>
    <relationshipLabel>Portfolio Outputs</relationshipLabel>
    <relationshipName>Portfolio_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>