force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_IndividualApplication__c.field-meta.xml
<CustomField>
    <fullName>uNI_IndividualApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Portfolio Outputs</relationshipLabel>
    <relationshipName>Portfolio_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>