force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_InternalSequence__c.field-meta.xml
<CustomField>
    <fullName>uNI_InternalSequence__c</fullName>
    <label>Internal Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>