force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_LeadOrgNarrative__c.field-meta.xml
<CustomField>
    <fullName>uNI_LeadOrgNarrative__c</fullName>
    <label>Lead Org Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>