force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_OutputDescription__c.field-meta.xml
<CustomField>
    <fullName>uNI_OutputDescription__c</fullName>
    <label>Output Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>