force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_OutputTitle__c.field-meta.xml
<CustomField>
    <fullName>uNI_OutputTitle__c</fullName>
    <label>Output Title</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>