force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_Parent_Portfolio_Output__c.field-meta.xml
<CustomField>
    <fullName>uNI_Parent_Portfolio_Output__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refer to Portofolio output attached to its parent CFP</description>
    <label>Parent Portfolio Output</label>
    <referenceTo>uNI_PortfolioOutput__c</referenceTo>
    <relationshipLabel>Portfolio Outputs</relationshipLabel>
    <relationshipName>Portfolio_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>