force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_ProjectSpecificContributions__c.field-meta.xml
<CustomField>
    <fullName>uNI_ProjectSpecificContributions__c</fullName>
    <label>Project-specific contributions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>