force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_SubImp1Narrative__c.field-meta.xml
<CustomField>
    <fullName>uNI_SubImp1Narrative__c</fullName>
    <label>SubImp1 Narrative</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>