force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_SubImp3Narrative__c.field-meta.xml
<CustomField>
    <fullName>uNI_SubImp3Narrative__c</fullName>
    <label>SubImp3 Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>