force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_total__c.field-meta.xml
<CustomField>
    <fullName>uNI_total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>