force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_Version__c.field-meta.xml
<CustomField>
    <fullName>uNI_Version__c</fullName>
    <label>Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>