force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_Year1Narrative__c.field-meta.xml
<CustomField>
    <fullName>uNI_Year1Narrative__c</fullName>
    <label>Year1 Narrative</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>