force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_Year3__c.field-meta.xml
<CustomField>
    <fullName>uNI_Year3__c</fullName>
    <label>Year3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>