force-app/main/default/objects/uNI_PortfolioOutput__c/fields/uNI_YearsPercent__c.field-meta.xml
<CustomField>
    <fullName>uNI_YearsPercent__c</fullName>
    <label>%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>